Fix disappearing nav links on mobile

--- a/src/styles/_main-nav-a.scss
+++ b/src/styles/_main-nav-a.scss
@@ -29,10 +29,7 @@
   }
 
   .main-nav__links-wrapper {
-    padding-top: 96px;
-    position: fixed;
-    top: 0;
-    bottom: 0;
+    padding-top: 6rem;
 
     .link {
       color: --theme-on-primary;
